# python-tutorial

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
00_setup/: 01_hello.py  02_about_uv.py  README.md
01_basics/: 01_variables.py  02_numbers.py  03_strings.py  04_booleans.py  05_control_flow.py  06_io.py  README.md
02_data_structures/: 01_list.py  02_tuple.py  03_dict.py  04_set.py  05_comprehensions.py  06_slicing.py  07_value_vs_reference.py  08_copy_immutability.py  README.md
03_functions/: 01_function_basics.py  02_args_kwargs.py  03_lambda_higher_order.py  04_scope_closure.py  05_recursion.py  README.md
04_modules_packages/: 01_import_basics.py  02_stdlib_pathlib.py  03_stdlib_datetime.py  04_stdlib_random_math.py  05_making_modules.py  README.md
05_oop/: 01_classes.py  02_inheritance.py  03_magic_methods.py  04_dataclass.py  05_property.py  06_enum.py  07_abc.py  08_slots.py  README.md
06_errors_exceptions/: 01_try_except.py  02_else_finally.py  03_raise_custom.py  04_exception_hierarchy.py  05_eafp.py  06_chaining.py  README.md
07_io_files/: 01_open_read_write.py  02_with_statement.py  03_json.py  04_csv.py  05_pathlib_io.py  06_temp_files.py  README.md
08_iterators_generators/: 01_iter_next.py  02_yield_basics.py  03_generator_expressions.py  04_itertools.py  05_pipeline.py  README.md
09_advanced_python/: 01_decorators.py  02_context_managers.py  03_descriptors.py  04_metaclasses_intro.py  05_pattern_matching.py  README.md
10_typing/: 01_basic_hints.py  02_typed_dict_protocol.py  03_generics.py  04_mypy_check.py  05_real_world_patterns.py  (+1 more)
(+242 files in other folders)
