[project]
name = "python-tutorial"
version = "0.1.0"
description = "단계별 파이썬 학습 자료 (기초 → 중급 → 고급 → 실전 라이브러리)"
requires-python = ">=3.12"
dependencies = []  # Phase 1~3은 표준 라이브러리만 사용한다.

# Phase별 라이브러리는 optional-dependencies로 분리한다.
# 해당 Phase에 진입할 때 `uv pip install -e ".[<group>]"` 로 설치한다.
[project.optional-dependencies]
data    = ["numpy", "pandas", "matplotlib", "jupyter"]                    # 13_data_science
web     = ["fastapi", "uvicorn", "requests", "pydantic", "sqlalchemy"]    # 14_web_backend
auto    = ["beautifulsoup4", "click"]                                     # 15_automation
test    = ["pytest", "pytest-cov"]                                        # 12_testing
typing  = ["mypy"]                                                        # 10_typing
dev     = ["ruff", "black"]                                               # 16_tooling_packaging

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# 학습용 저장소이므로 빌드할 패키지는 없다.
bypass-selection = true
